gateway/higress/lds-cache/higress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    meta.helm.sh/release-name: higress
    meta.helm.sh/release-namespace: higress-system
  labels:
    app: higress-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: higress-controller
    app.kubernetes.io/version: 2.0.3
    helm.sh/chart: higress-core-2.0.3
    higress: higress-controller
    k8slens-edit-resource-version: v1
  name: higress-controller
  namespace: higress-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: higress-controller
      higress: higress-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: higress-controller
        higress: higress-controller
    spec:
      containers:
      - args:
        - serve
        - --gatewaySelectorKey=higress
        - --gatewaySelectorValue=higress-system-higress-gateway
        - --gatewayHttpPort=80
        - --gatewayHttpsPort=443
        - --ingressClass=higress
        - --enableAutomaticHttps=true
        - --automaticHttpsEmail=
        image: higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/higress:2.0.3
        imagePullPolicy: IfNotPresent
        name: higress-core
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        - containerPort: 8889
          name: http-solver
          protocol: TCP
        - containerPort: 15051
          name: grpc
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log
          name: log
      - args:
        - discovery
        - --monitoringAddr=:15014
        - --log_output_level=default:debug
        - --domain
        - cluster.local
        - --keepaliveMaxServerConnectionAge
        - 30m
        image: higress-registry.cn-hangzhou.cr.aliyuncs.com/higress/pilot:2.0.3
        imagePullPolicy: Always
        name: discovery
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 15010
          protocol: TCP
        - containerPort: 15017
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: true
          runAsUser: 1337
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/istio/config
          name: config
        - mountPath: /var/run/secrets/tokens
          name: istio-token
          readOnly: true
        - mountPath: /var/run/secrets/istio-dns
          name: local-certs
        - mountPath: /etc/cacerts
          name: cacerts
          readOnly: true
        - mountPath: /var/run/secrets/remote
          name: istio-kubeconfig
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: higress-controller
      serviceAccountName: higress-controller
      terminationGracePeriodSeconds: 30
      volumes:
      - name: log
      - configMap:
          defaultMode: 420
          name: higress-config
        name: config
      - emptyDir:
          medium: Memory
        name: local-certs
      - name: istio-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - name: cacerts
        secret:
          defaultMode: 420
          optional: true
          secretName: cacerts
      - name: istio-kubeconfig
        secret:
          defaultMode: 420
          optional: true
          secretName: istio-kubeconfig
